Fix swagger api specification
