# docs/swagger.json
@@ -110,17 +110,6 @@
                     "room"
                 ],
                 "summary": "Get room status",
-                "parameters": [
-                    {
-                        "description": "RoomCreateRequest",
-                        "name": "RoomCreateRequest",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/data.RoomCreateRequest"
-                        }
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
